# tools-manager

./: .gitmodules  .prettierrc  package.json
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: request.rs
src/components/: ChromeDriver.svelte
src/entities/: ChromeVersions.ts
src/libs/: invokes.ts
